# lazily.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml  setup.cfg
lazily/: __init__.py
tests/: ImportTimeline.py  testIdempotency.py  testInterference.py  testIsInstanceImportFirstInitFirst.py  testIsInstanceImportFirstInitLast.py  testIsInstanceImportLastInitLast.py  testPartialImport.py  testSimple.py  testSubmoduleInterference.py  testThirdPartInterference.py
tests/lazilyTest1/: __init__.py  a.py  b.py
tests/lazilyTest1/submodule/: __init__.py
tests/lazilyTest2/: __init__.py  a.py  b.py
