[metadata]
name = lazily
author = KOLANICH
url = https://gitlab.com/KOLANICH/lazily.py
description = Imports other modules lazily.
long_description = file: ReadMe.md
keywords = import, lazy
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = True
packages = lazily
setup_requires = setuptools_scm;
test_suite = tests.test
install_requires =
	lazy_object_proxy
test_requires =
	sideBySideDiff @ git+https://gitlab.com/KOLANICH/sideBySideDiff.py.git